--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -175,6 +175,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Character.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_CurrentAnimStateCheck.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Interaction.cpp" />
     <ClCompile Include="src\DUOLClient\Player\FSM\PlayerState_Transcendence.cpp" />
@@ -221,6 +222,7 @@
     <ClCompile Include="src\DUOLClient\Util\TransformController.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Character.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_Die.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_Hit.h" />
     <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Condition\Condition_AnimPlayCheck.h" />
