--- a/DUOLGraphicsLibrary_Direct3D11/DUOLGraphicsLibrary_Direct3D11.vcxproj
+++ b/DUOLGraphicsLibrary_Direct3D11/DUOLGraphicsLibrary_Direct3D11.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="src\DUOLGraphicsLibrary_Direct3D11\Renderer\Resource\D3D11Texture.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="src\DUOLGraphicsLibrary_Direct3D11\Util\DXHelper.h" />
+    <ClInclude Include="src\DUOLGraphicsLibrary_Direct3D11\Util\ReadData.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLGraphicsLibrary_Direct3D11\Renderer\Buffer\D3D11BufferWithRV.cpp" />
