몬스터 이동 Boids 알고리즘 적용
몬스터 이동 Boids 알고리즘 적용

--- a/DUOLClient/DUOLClient.vcxproj
+++ b/DUOLClient/DUOLClient.vcxproj
@@ -175,6 +175,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Action\Action_BoidsMoveTo.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\CharacterBase.cpp" />
     <ClCompile Include="src\DUOLClient\ECS\Component\Enemy.cpp" />
     <ClCompile Include="src\DUOLClient\BehaviorTreeNode\Condition\Condition_CurrentAnimStateCheck.cpp" />
@@ -224,6 +225,7 @@
     <ClCompile Include="src\DUOLClient\Util\TransformController.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLClient\BehaviorTreeNode\Action\Action_BoidsMoveTo.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\Enemy.h" />
     <ClInclude Include="include\DUOLClient\ECS\Component\CharacterBase.h" />
     <ClInclude Include="include\DUOLClient\Util\EventListenerIDHolder.h" />
