--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
@@ -109,6 +109,7 @@
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Button.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Util\Octree.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Util\Geometries.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Util\Quadtree.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Image.h" />
@@ -223,5 +224,6 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Button.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Octree.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Geometries.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\Quadtree.h" />
   </ItemGroup>
 </Project>
