--- a/DUOLGame/DUOLGame.vcxproj
+++ b/DUOLGame/DUOLGame.vcxproj
@@ -118,7 +118,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>DUOLClient.lib;DUOLGameEngine_DLL.lib;DUOLGraphicsEngine.lib;DUOLGraphicsLibrary.ib;DUOLCommon.lib;DUOLMath.lib;DUOLPhysics.lib;rttr_core.lib;behaviortree_cpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>DUOLClient.lib;DUOLGameEngine_DLL.lib;DUOLGraphicsEngine.lib;DUOLCommon.lib;DUOLMath.lib;rttr_core.lib;behaviortree_cpp.lib;DUOLGraphicsLibrary.ib;DUOLCommon.lib;DUOLMath.lib;DUOLPhysics.lib;rttr_core.lib;behaviortree_cpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -154,7 +154,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>DUOLClient.lib;DUOLGameEngine_DLL.lib;DUOLGraphicsEngine.lib;DUOLGraphicsLibrary.lib;DUOLCommon.lib;DUOLMath.lib;DUOLPhysics.lib;rttr_core.lib;behaviortree_cpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>DUOLClient.lib;DUOLGameEngine_DLL.lib;DUOLGraphicsEngine.lib;DUOLCommon.lib;DUOLMath.lib;rttr_core.lib;behaviortree_cpp.lib;DUOLGraphicsLibrary.lib;DUOLCommon.lib;DUOLMath.lib;DUOLPhysics.lib;rttr_core.lib;behaviortree_cpp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(OutDir);$(SolutionDir)Dependency\boost_1_80_0\stage\lib\;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
