--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
@@ -111,6 +111,7 @@
     <ClCompile Include="src\DUOLGameEngine\Util\Geometries.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Util\Quadtree.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Sprite.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Manager\ButtonEventManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Image.h" />
@@ -227,5 +228,6 @@
     <ClInclude Include="include\DUOLGameEngine\Util\Geometries.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Quadtree.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Sprite.h" />
+    <ClInclude Include="include\DUOLGameEngine\Manager\ButtonEventManager.h" />
   </ItemGroup>
 </Project>
