--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
@@ -171,6 +171,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLGameEngine\Manager\ButtonEventManager.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Sprite.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Geometries.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Button.h" />
@@ -287,6 +288,7 @@
     <ClInclude Include="include\DUOLGameEngine\Util\Quadtree.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\Manager\ButtonEventManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Object\Sprite.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Util\Quadtree.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Util\Geometries.cpp" />
